src/objects/CPR_Company__c.object
<CustomObject>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legal_entity__c</fullName>
        <label>legal_entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profitability_Relationship_Name__c</fullName>
        <label>profitability_Relationship_Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>CPR_Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CPR_Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPR_Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>